# StellarisModManager

./: .gitignore  App.axaml  App.axaml.cs  Program.cs  README.md  StellarisModManager.csproj  StellarisModManager.sln  app.manifest  build-installer.bat  build.bat  installer.iss  repo.json  run.bat  stellaris-mod-manager-plan.md  test-pp.iss  test.bat  test.iss  test.ps1
.github/workflows/: release-installer.yml
Core/Models/: GameInstall.cs  Mod.cs  ModProfile.cs
Core/Services/: AppSettings.cs  AppUpdateService.cs  AppVersionInfo.cs  BackgroundUpdaterRuntime.cs  GameDetector.cs  ModDatabase.cs  ModExportImport.cs  ModInstaller.cs  ModUpdateChecker.cs  StellarisLauncherSyncService.cs  StellarisyncClient.cs  ThemePaletteService.cs  WorkshopDownloadRuntime.cs  WorkshopDownloader.cs
Core/Utils/: DescriptorParser.cs  OverlayInjector.cs  StellarisVersions.cs  WebViewRuntimeConfig.cs
ElectronSpike/: build.bat  package-lock.json  package.json  run.bat  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.mts
ElectronSpike/scripts/: run-node-tests.mjs
ElectronSpike/src/: main.ts  preload.ts  webviewPreload.ts
ElectronSpike/tests/: app-update-visibility.test.js  dark-saas-glass-style.test.js  (+59 more)
Updater/: Program.cs  StellarisModManager.Updater.csproj  python_updater.py  python_updater_usage.md
installer/: stellaris-mod-manager.iss
updater/: Cargo.toml  README.md  build.rs
updater/assets/: app.manifest  app.rc
updater/src/: app.rs  artifacts.rs  cli.rs  demo.rs  download.rs  events.rs  install.rs  log.rs  main.rs  theme.rs  verify.rs  worker.rs
(+127 files in other folders)
