[package]
name = "smm-updater"
version = "0.1.0"
edition = "2021"
description = "Stellaris Mod Manager native update companion"
license = "MIT"

[[bin]]
name = "smm-updater"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
ureq = { version = "2.10", default-features = false, features = ["tls", "gzip"] }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4"
anyhow = "1"
url = "2.5"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
